<resources>

    <string name="app_name">MMAndroid</string>
    
    <!-- BUTTONS -->
    <string name="btn_list_authors">Artists</string>
    <string name="btn_media">Media</string>
    <string name="btn_open_music_player">Open Music Player</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_play_list">Playlists</string>
	<string name="btn_addMusiclist">Inserir Musica</string>
    <string name="btn_addPlaylist">Add a new playlist</string>
    <string name="btn_share">Share</string>
	<string name="btn_synchronize">Synchronize</string>    
    <string name="btn_PlayPlaylist">Play Playlist</string>
	<string name="btn_top_artists">Top Artists</string>
    <string name="btn_top_songs">Top Songs</string>
    
    <string name="lb_select_media">Select a video</string>
    <string name="lb_instruction">Select a video for playing</string>
    
    <string name="title_author_list_fragment">Authors</string>
    <string name="title_author_expandable_list">Albums of</string>
    
    <string name="title_activity_share_list">Share</string>

    <string name="title_activity_author_list">AuthorListActivity</string>
    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="title_activity_playlist_editor">PlaylistEditorActivity</string>
    <string name="title_activity_music_select">MusicSelectActivity</string>    
	<string name="title_activity_audio_table">AudioTableActivity</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
    <string name="title_activity_select_activity">AudioSelectActivity</string>
    
    <string name="name">Name:</string>
    <string name="end">End</string>
    
    <string name="add_a_music">Add a music</string>
    <string name="sync_music">Sync complete</string>
	<string name="sync_music_not_ok">Error during sync</string>
	<string name="message_synchronization_finished">The database content has been synchronized</string>

	<string name="need_to_be_implemented">Needs to be implemented.</string>
	
	<!-- SETTINGS MESSAGE -->
	<string name="menu_settings">Settings</string>
	<string name="menu_settings_pause_headphone_off_title">Pause when Unplugged</string>
	<string name="menu_settings_pause_headphone_off_subtitle">Pause the music when the headphone is disconnected ?</string>
	<string name="menu_settings_play_headphone_on_title">Play when Inserted</string>
    <string name="menu_settings_play_headphone_on_subtitle">Resume the music when the headphone is reconnected ?</string>
	<string name="menu_settings_version_title">MMUnB Version</string>
    <string name="menu_settings_info_title">Music Library Info</string>
    
	<!-- SERVICE MESSAGES -->
	<string name="service_music_play_headphone_on">Headphone connected</string>
	<string name="service_music_play_headphone_off">Headphone disconnected</string>    

	<!-- NOTIFICATION -->
	<string name="notification_button_play">Play</string>
    <string name="notification_button_skip">Skip</string>
	
	<!-- MENU -->
	<string name="menu_main_settings">Settings</string>
    <string name="menu_main_now_playing">Now Playing</string>
	
    <!-- Action Bar Strings MMUnBActivity -->
    <string name="play_list_ab">Play List</string>
    <string name="facebook_ab">Facebook</string>
    <string name="twiiter_ab">Twiiter</string>
    <string name="instagram_ab">Instagram</string>
    <string name="exit_ab">Exit</string>
    <string name="refresh_ab">Refresh</string>
    
    <!-- Context menus -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="manager_playlist">Manager Playlist</string>
    <string name="manager_playlist_exec">play</string>
    <string name="add_geographical_position">Add Position GPS</string>
    
    <!-- Action Bar Strings PlayListActivity -->
    <string name="add_play_list_ab">New Play List</string>
    <string name="add_music_in_play_list_ab">Add Music</string>
    <string name="execute_play_list">Play</string>
    
    <string name="saveMedia">Save</string>
    <string name="removeMedia">Delete</string>
    
    <string name="noMediaFound">Nenhuma Musica Encontrada.</string>
    
    <string name="drawer_open">Open Drawer</string>
	<string name="drawer_close">Close Drawer</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Authors</item>
        <item >Albums</item>
        <item >Playlist</item>
        <item >Musics</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_author</item>
        <item>@drawable/ic_album</item>
        <item>@drawable/ic_playlist</item>
        <item>@drawable/ic_music</item>
    </array>
    
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- THEMES -->
    <string-array name="themes">
        <item>Device Default</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Solarized Dark</item>
        <item>Wallpaper</item>
        <item>Dialog Light</item>
        <item>Dialog Dark</item>
        <item>Light (simple)</item>
        <item>Dark (simple)</item>
    </string-array>

    <string-array name="themes_values">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
        <item>solarized_dark</item>
        <item>wallpaper</item>
        <item>dialog_light</item>
        <item>dialog_dark</item>
        <item>light_simple</item>
        <item>dark_simple</item>
    </string-array>
    
</resources>